--- a/AStar Ambush Threading/AStar Ambush Threading/AStar Ambush Threading.vcxproj
+++ b/AStar Ambush Threading/AStar Ambush Threading/AStar Ambush Threading.vcxproj
@@ -119,6 +119,8 @@
   <ItemGroup>
     <ClCompile Include="Arc.cpp" />
     <ClCompile Include="AStar.cpp" />
+    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="EnemyType.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="main.cpp" />
@@ -132,10 +134,13 @@
   <ItemGroup>
     <ClInclude Include="Arc.h" />
     <ClInclude Include="AStar.h" />
+    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="EnemyType.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EventListener.h" />
     <ClInclude Include="InputHandler.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Spawner.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="World.h" />
     <ClInclude Include="Node.h" />
