--- a/AStar Ambush Threading/AStar Ambush Threading/AStar Ambush Threading.vcxproj
+++ b/AStar Ambush Threading/AStar Ambush Threading/AStar Ambush Threading.vcxproj
@@ -125,7 +125,7 @@
     <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Node.cpp" />
-    <ClCompile Include="NodeLayout.cpp" />
+    <ClCompile Include="NodeGrid.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Tile.cpp" />
@@ -137,7 +137,7 @@
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="EnemyType.h" />
     <ClInclude Include="Entity.h" />
-    <ClInclude Include="EventListener.h" />
+    <ClInclude Include="Keys.h" />
     <ClInclude Include="InputHandler.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Spawner.h" />
@@ -145,7 +145,7 @@
     <ClInclude Include="World.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="NodeCostComparer.h" />
-    <ClInclude Include="NodeLayout.h" />
+    <ClInclude Include="NodeGrid.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Vector.h" />
   </ItemGroup>
